[package]
name = "apicize_lib"
version = "0.30.9"
edition = "2024"
rust-version = "1.91"
description = "Library supporting Apicize request dispatch, testing and serialization"
license = "MIT"
repository = "https://github.com/apicize/lib-rust"
readme = "README.md"
authors = ["Jason Terando"]

[features]
editing = []

[dependencies]
reqwest = { version = "^0.12.9", features = ["native-tls", "socks", "multipart"] }
tokio = { version = "^1.41.0", features = ["macros"] }
futures = "^0.3.29"
serde_json = { version = "^1.0.108", features = ["preserve_order"] }
serde = { version = "^1.0.193", features = ["derive"] }
mime = "^0.3.17"
encoding_rs = "^0.8.33"
serde_with = { version = "^3.16.1", features = ["base64"] }
async-recursion = "^1.0.5"
uuid = { version = "^1.6.1", features = ["v4"] }
async-trait = "^0.1.75"
v8 = "^145"
oauth2 = { version = "^5.0.0", features = ["reqwest"] }
tokio-util = "^0.7.10"
dirs = "^6"
csv = "1.3.1"
regex = "1.11.1"
xmltojson = "0.3.0"
indexmap = "2.11.4"
thiserror = "2.0.17"
bitflags = { version = "2.10.0" }

[dev-dependencies]
base64 = "^0.22.1"
mockall = "^0.14.0"
mockito = "^1.2.0"
serial_test = "^3.1.1"
sha2 = "^0.10.8"

[build-dependencies]
npm_rs = "1.0.0"
